CHANGES IN VERSION 1.1.13
------------------------
 o better implementation of geom_tiplab for accepting aes mapping and auto add align dotted line <2015-08-01, Sat>
 o open group_name parameter of groupOTU/groupClade to user <2015-08-01, Sat>
 
CHANGES IN VERSION 1.1.12
------------------------
 o update vignette according to the changes <2015-07-31, Fri>
 o add mapping parameter in ggtree function <2015-07-31, Fri>
 o extend groupClade to support operating on tree view <2015-07-31, Fri>
 o extend groupOTU to support operating on tree view <2015-07-31, Fri>
 o new implementation of groupClade & groupOTU <2015-07-31, Fri>
 
CHANGES IN VERSION 1.1.11
------------------------
 o annotation_clade and annotation_clade2 functions. <2015-07-30, Thu>
 o better add_legend implementation. <2015-07-30, Thu>
 o add ... in theme_tree & theme_tree2 for accepting additional parameter. <2015-07-30, Thu>
 o better geom_tree implementation. Now we can scale the tree with aes(color=numVar). <2015-07-30, Thu>
 
CHANGES IN VERSION 1.1.10
------------------------
 o solve overlapping branches for layout = "fan" || "radial",
   that are coord_polar-ized layouts.
   see https://github.com/GuangchuangYu/ggtree/issues/6,
   contributed by Vincent Bonhomme. <2015-07-22, Wed>

CHANGES IN VERSION 1.1.9
------------------------
 o update add_legend to align legend text <2015-07-06, Mon>
 o bug fixed in internal function, getChild.df, which should not include root node if selected node is root <2015-07-01, Wed>
 o rotate function for ratating a clade by 180 degree and update vignette <2015-07-01, Wed>
 o get_taxa_name function will return taxa name vector of a selected clade <2015-06-30, Tue>
 o add example of flip function in vignette <2015-06-30, Tue>
 o flip function for exchanging positions of two selected branches <2015-06-30, Tue>
 
CHANGES IN VERSION 1.1.8
------------------------
 o update get.placement <2015-06-05, Fri>