@@ -19,6 +19,7 @@ export(add_legend)
 export(aes)
 export(annotation_clade)
 export(annotation_clade2)
+export(annotation_image)
 export(as.binary)
 export(collapse)
 export(download.phylopic)
